# lang_performance

./: .gitignore  Benchmark.exs  Benchmark.hs  BenchmarkJava.java  BenchmarkScala.scala  BenchmarkScala.tasty  CHANGELOG.md  Cargo.toml  base.scala  benchmark.c  benchmark.cabal  benchmark.clj  benchmark.erl  benchmark.rs  benchmark_results.json  benchmark_visualization.txt  erl_crash.dump  main.go  plot_results.py  requirements.txt  run_benchmark.sh
.bsp/: scala-cli.json
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: lang_performance_bde03bda35-de0348167f.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: main.rs
