cabal-version:      3.0
name:                 benchmark
version:             0.1.0.0
build-type:          Simple

executable benchmark
    main-is:            Benchmark.hs
    build-depends:      base ^>=4.17.2.1
                     , random
    default-language:   Haskell2010
    ghc-options:       -O2
