cabal-version:      3.0
name:                 benchmark
version:              0.1.0.0
build-type:          Simple

executable benchmark
    main-is:          Benchmark.hs
    build-depends:    base >= 4.14 && < 5
                    , parallel >= 3.2
                    , random >= 1.2
                    , vector >= 0.12
    default-language: Haskell2010
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    cpp-options:      -DGHC_PARALLEL
